# HAND

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  coverage_baseline.json  hand_ir.schema.json  reconstruye_repo.py  trace.json
01_hello/: expected.ast.json  expected.python_run.json  expected.tokens.json  expected.trace.json
03_assign_int/: expected.python_run.json
04_arith/: expected.trace.json
05_compare/: expected.ir.json  expected.trace.json
06_if_true/: expected.python.py
07_if_false/: expected.tokens.json
08_while_count/: _gen_run.py  expected.ir.json  expected.tokens.json
09_while_with_if/: expected.tokens.json
10_text_plus/: expected.ir.json  expected.tokens.json
11_float_ops/: expected.ir.json  expected.python_run.json  expected.tokens.json  expected.trace.json
12_ask_echo/: expected.ast.json
13_ask_concat/: expected.tokens.json
14_verify_ok/: expected.ast.json  expected.python.py
19_multi_returns/: expected.tokens.json
21_while_sum/: expected.ir.json  expected.python_run.json  expected.trace.json  program.hand
22_precedence/: expected.python_run.json
23_parens/: expected.ast.json  program.hand
27_neq_int/: expected.ast.json
28_ge_le/: expected.trace.json
29_div_float/: expected.python.py  expected.python_run.json  expected.tokens.json
34_if_expr_cond/: expected.trace.json
SALIDA/hand_tree_translator/: LICENSE  pyproject.toml
SALIDA/hand_tree_translator/src/hand_tree_translator/: __init__.py  cli.py  hand_format.py  python_subset.py  translate_tree.py
SALIDA/hand_tree_translator/tests/: test_python_subset.py
(+455 files in other folders)
